v0.16
    * ADD : Add SHP feature attributes as not uploadable OSM Feature tags
    * FIX : Allow to load OS VectorMap District shapefiles
    * ADD : Allow to save geotagged images
    * CHG : Enhanced support for geotagged images drag&drop
    * CHG : Geotag support enhancements
    * FIX : use gpsd api and implement gpsd-ng
    * FIX : Do not take closed layers into account when choosing photo layer (fixes #2823)
    * ADD : show geotagged photos on the map (disable via 'view-Show Photos on map')
    * FIX : crash when closing layers containing photos (fixes #2828)
    * CHG : Allow importing geotagged photos when no track layer is present (closes #2827)
    * ADD : Templates xsd (by Jonathan Bennett) (closes #2809; closes #2707)	
    * ADD : allow to re-order relation members (closes #2759)
    * FIX : solves a problem when hovering large relations
    * ADD : add a projection editor 
    * ADD : allow google maps links in goto and download dialogs
    * FIX : abort tile downloading when zooming
    * ADD : Allow to tile (and cache) arbitrary WMS'es (only EPSG:4326 and google projection supported)
    * CHG : rework "Zoom lock" and move it to the view menu
    * ADD : support for WMS-C servers (see http://wiki.openstreetmap.org/wiki/Merkaartor/Documentation#WMS-C_Servers) (closes #2598)
    * FIX : problem when joining ways
    * CHG : hardcode "lat/long", i.e. EPSG:4326, projection
    * CHG : hardcode "google" projection.
    * CHG : adapt TMS code to allow for non-google projections
    * ADD : add the possibility to show a lat/lon grid
    * FIX : delete a way when its second to last node is deleted (fixes #2786)
    * FIX : make sure polygons are at least 1 pixel wide when drawing them at creation time
    * FIX : Do not count deleted parents when removing children nodes (fixes #2785)
    * FIX : Make sure not to write to the log after it has been closed (fixes #2783)
    * FIX : OSX Qt system translations location (by Aleksandar)